--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,64 @@
 pythonpath = [
   "src"
 ]
+
+[build-system]
+requires = [
+  "setuptools",
+  "setuptools-scm"
+]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "i-beg-to-differ"
+authors = [
+  {name = "Michael Ching", email = "chingdaotze@yahoo.com"}
+]
+description = "Tabular comparison application, powered by Pandas."
+readme = {file = "README.md"}
+requires-python = ">=3.12"
+license = {file = "LICENSE"}
+keywords = [
+  "compare",
+  "table",
+  "dataframe",
+  "testware",
+  "pandas"
+]
+classifiers = [
+  "Development Status :: 2 - Pre-Alpha",
+  "Environment :: Win32 (MS Windows)",
+  "Intended Audience :: Developers",
+  "Intended Audience :: Financial and Insurance Industry",
+  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+  "Natural Language :: English",
+  "Operating System :: Microsoft :: Windows :: Windows 10",
+  "Operating System :: Microsoft :: Windows :: Windows 11",
+  "Programming Language :: Python :: 3 :: Only",
+  "Topic :: Database",
+  "Topic :: Office/Business :: Financial",
+  "Topic :: Office/Business :: Financial :: Spreadsheet",
+  "Topic :: Software Development :: Testing"
+]
+dynamic = [
+  "version",
+  "dependencies"
+]
+
+[project.urls]
+Homepage = "https://actuarial-model.readthedocs.io/en/latest/index.html"
+Documentation = "https://actuarial-model.readthedocs.io/en/latest/index.html"
+Repository = "https://github.com/chingdaotze/i-beg-to-differ.git"
+Issues = "https://github.com/chingdaotze/i-beg-to-differ/issues"
+Changelog = "https://github.com/chingdaotze/i-beg-to-differ/blob/main/CHANGELOG.md"
+
+[project.scripts]
+i-beg-to-differ-cli = "i-beg-to-differ:main"
+
+[project.gui-scripts]
+i-beg-to-differ-gui = "i-beg-to-differ:main_gui"
+
+[tool.setuptools_scm]
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
