--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,9 @@ dependencies = [
   "pandas>=2.2.3",
   "pyarrow>=17.0.0",
   "SQLAlchemy>=2.0.35",
-  "psutil>=6.0.0"
+  "psutil>=6.0.0",
+  "typer>=0.12.5",
+  "PySide6>=6.8.0.1"
 ]
 
 [project.urls]
@@ -58,5 +60,11 @@ Documentation = "https://actuarial-model.readthedocs.io/en/latest/index.html"
 Repository = "https://github.com/chingdaotze/i-beg-to-differ.git"
 Issues = "https://github.com/chingdaotze/i-beg-to-differ/issues"
 Changelog = "https://github.com/chingdaotze/i-beg-to-differ/blob/main/CHANGELOG.md"
+
+[project.scripts]
+i-beg-to-differ-cli = "i_beg_to_differ.__main__:cli"
+
+[project.gui-scripts]
+i-beg-to-differ = "i_beg_to_differ.__main__:gui"
 
 [tool.setuptools_scm]
